--- a/css/app.css
+++ b/css/app.css
@@ -56,3 +56,12 @@ a:hover {
   stroke-opacity: 0.6;
   stroke-width: 10px;
 }
+
+.graph-info {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  border-radius: 5px;
+}
