--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,8 @@
-h1, p, ul {
-  margin: 0;
-  padding: 0;
-}
-
 body {
+  background-color: #f4f4f4;
   font-family: 'Muli', sans-serif;
+  color: #333;
+  margin: 0;
 }
 
 ul {
@@ -65,3 +63,40 @@ a:hover {
   padding: 10px;
   border-radius: 5px;
 }
+
+.container {
+  max-width: 900px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+p {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.graph-info {
+  margin-top: 20px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+
+
+
