--- a/css/app.css
+++ b/css/app.css
@@ -55,6 +55,12 @@ a:hover {
   stroke-width: 10px;
 }
 
+.loop {
+  stroke: #000;
+  stroke-width: 1.5px;
+  fill: none;
+}
+
 .graph-info {
   position: absolute;
   top: 10px;
