Add a button which allows to create loop with vertices from 3-10

--- a/css/app.css
+++ b/css/app.css
@@ -103,6 +103,23 @@ li {
   margin-bottom: 5px;
 }
 
+.loop-info {
+  margin-top: 20px;
+}
+
+.loop-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.loop-list li {
+  margin-bottom: 5px;
+  padding: 5px;
+  background-color: #f3f3f3;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
 
 
 
