--- a/css/app.css
+++ b/css/app.css
@@ -120,6 +120,20 @@ li {
   border-radius: 4px;
 }
 
+.color-btn {
+  padding: 10px;
+  border: none;
+  margin: 5px;
+  cursor: pointer;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.color-btn.active, .color-btn:focus {
+  opacity: 1;
+  outline: none; /* Optional: removes the default focus outline */
+}
+
 
 
 
