--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,10 @@
 body {
   background-color: #f4f4f4;
-  font-family: 'Muli', sans-serif;
   color: #333;
-  margin: 0;
+  margin: 20;
+  padding: 20px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  font-family: cursive;
 }
 
 ul {
@@ -31,6 +33,10 @@ a:hover {
 
 .title {
   margin-bottom: 10px;
+  color: #f7abc7;
+  stroke: black;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  font-family: cursive;
 }
 
 .instructions {
@@ -79,7 +85,7 @@ a:hover {
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 36px;
   margin-bottom: 20px;
 }
 
